[package]
name = "cor-args"
version = "0.1.0"
edition = "2021"
authors = ["Erich Schroeter <erich.schroeter@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A Rust library providing Chain of Responsibility command line argument parsing."
readme = "README.md"
homepage = "https://github.com/erichschroeter/cor-args"
repository = "https://github.com/erichschroeter/cor-args"
keywords = ["cli", "parse", "argument", "arg", "parser"]
categories = ["command-line-interface"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["string", "env"] }
config = "0.13.3"
env_logger = "0.10.0"
log = "0.4.20"
serde_json = "1.0.108"

[dev-dependencies]
tempfile = "3.8.1"
unindent = "0.2.3"
